--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -49,3 +49,9 @@ body {
   margin: 30px 0 60px 0;
   text-align: center;
 }
+
+@media all and (min-width: 768px) {
+  .main {
+    margin: 0 160px;
+  }
+}
