--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -1,19 +1,20 @@
+body {
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif;
+}
+
 .header {
-  /* no consigo poner la imagen*/
   background-size: cover;
   background-image: url(../images/altavoz-barato-1-2-3.jpg);
   width: 100%;
   height: 421px;
 }
-.campos {
+.containerequipo {
   color: #54585a;
+  font-size: 12px;
   margin: 30px 0 60px 0;
 }
 
-body {
-  font-size: 14px;
-  font-family: "Open Sans", sans-serif;
-}
 .textequip {
   margin: 20px 0px 20px 0;
   font-family: "Open Sans", sans-serif;
@@ -24,7 +25,10 @@ body {
 .main {
   margin: 20px;
 }
+
 .form {
+  display: grid;
+  grid-column: 1fr 1fr;
   box-sizing: border-box;
   border: solid 1px gray;
   margin: 10px 0 10px 0;
@@ -54,7 +58,9 @@ body {
   margin: 30px 0 60px 0;
   text-align: center;
 }
-
+.asterisk {
+  color: #14d9c4;
+}
 @media all and (min-width: 768px) {
   .main {
     margin: 0 160px;
