--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -18,8 +18,7 @@
 .header {
   background-size: cover;
   background-image: url(../images/altavoz-barato-1-2-3.jpg);
-  width: 100%;
-  height: 421px;
+  background-position: center;
 }
 .enlaces {
   display: flex;
