--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -19,6 +19,7 @@
   background-size: cover;
   background-image: url(../images/altavoz-barato-1-2-3.jpg);
   background-position: center;
+  height: 421px;
 }
 .enlaces {
   display: flex;
@@ -93,7 +94,6 @@
   }
   .enlaces {
     justify-content: flex-end;
-
     position: relative;
     top: -54px;
     font-size: 15px;
@@ -127,6 +127,9 @@
   }
 }
 @media all and (min-width: 1200px) {
+  .header {
+    height: 550px;
+  }
   .hero {
     left: -230px;
   }
