--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -7,7 +7,7 @@ body {
   background-size: cover;
   background-image: url(../images/contact.jpg);
   width: 100%;
-  height: 421px;
+  height: 300px;
 }
 .containerequipo {
   color: #54585a;
@@ -70,6 +70,9 @@ body {
 }
 
 @media all and (min-width: 1200px) {
+  .header2 {
+    height: 400px;
+  }
   .textequip {
     padding: 15px 0 30px 0;
     @include text;
