--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,12 +1,10 @@
 /* MAI */
 .nombredelequipo {
-  display: flex;
   flex-direction: column;
   justify-content: center;
   background-color: var(--colortitulo2-1);
   font-family: "Rubik", sans-serif;
   text-transform: uppercase;
-  width: 100%;
 }
 .nombre {
   height: 60px;
@@ -27,7 +25,6 @@
   font-family: "Rubik", sans-serif;
   color: white;
   background-color: rgba(0, 255, 255, 0.9);
-
   height: 45px;
 }
 .lema_titulo {
@@ -45,51 +42,43 @@
   background-color: white;
   padding: 14px 15px 16px;
   font-size: 18px;
-  font-family: "Open Sans", sans-serif;
   font-weight: 600;
   top: -30px;
   width: 80%;
   height: 50px;
 }
 .equipo {
-  display: flex;
-  justify-content: center;
   box-sizing: border-box;
-
   font-family: "rubik", sans-serif;
   font-size: 24px;
-  line-height: var(--interlineadotexto);
   color: aqua;
+
+  &:hover {
+    font-size: 25px;
+    transform: scale(1.5);
+    transition: transform linear 1s;
+  }
 }
 
-.equipo1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding: 30px, 15px, 90px; /* me quedo aqui */
-  font-family: "Rubik", sans-serif;
-  width: 100%;
-  line-height: var(--interlineadotexto);
-}
 .textoequipo {
-  display: flex;
-  flex-direction: column;
   padding: 30px 15px 30px;
-  font-family: "Open Sans", sans-serif;
   font-size: 16px;
-  line-height: var(--interlineadotexto);
   color: var(--colortexto);
 }
-
+.link {
+  &:hover {
+    font-size: 18px;
+    transform: scale(1.1);
+    transition: transform linear 1s;
+  }
+}
 /*****************Tablet*****************/
 @media all and (min-width: 768px) {
   .nombre {
-    display: flex;
     justify-content: flex-start;
-    align-items: center;
     box-sizing: border-box;
     font-size: 16px;
-    padding: 15px 45px 15px 45px;
+    padding: 0 45px 0 45px;
   }
   .enlaces {
     justify-content: flex-end;
