--- a/src/scss/layout/_strong.scss
+++ b/src/scss/layout/_strong.scss
@@ -22,6 +22,11 @@
 }
 .main__strong--title {
   @include greentitle;
+  &:hover {
+    font-size: 24px;
+    transform: scale(1.1);
+    transition: transform ease 0.5s;
+  }
 }
 .main__strong--paragraph {
   @include text;
