--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -69,7 +69,14 @@
           nuestra filosofía de trabajo.
         </p>
         <div class="icons iconsright">
-          <i class="fab fa-twitter"> · </i>
+          <i class="fab fa-twitter">
+            <a
+              href="https://es.linkedin.com/"
+              id="linkedin"
+              target="_blank"
+            ></a>
+            ·
+          </i>
           <i class="fab fa-github-alt"> · </i>
           <i class="fab fa-linkedin"> · </i>
           <i class="fas fa-envelope-square"></i>
