--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -37,6 +37,7 @@ body {
   width: 100%;
   height: 45px;
   padding-left: 15px;
+  box-sizing: border-box;
 }
 .label {
   text-align: left;
@@ -55,10 +56,8 @@ body {
   color: white;
   background-color: #099d8d;
   height: 45px;
-  width: 100%;
   border-radius: 4px;
   margin: 30px 0 60px 0;
-  text-align: center;
 }
 .asterisk {
   color: #14d9c4;
