--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -57,6 +57,7 @@ body {
   height: 45px;
   border-radius: 4px;
   margin: 30px 0 60px 0;
+  padding-left: 15px;
   @media (min-width: 768px) {
     grid-column: 2/4;
     margin-left: 20%;
